@@ -1,3 +1,9 @@
+2018-05-01  Marc Glisse  <marc.glisse@inria.fr>
+
+	PR tree-optimization/85143
+	* gcc.dg/tree-ssa/minmax-loopend.c: Extend and split...
+	* gcc.dg/tree-ssa/minmax-loopend-2.c: ... here.
+
 2018-05-01  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c/84258
